--- a/index.html
+++ b/index.html
@@ -1,268 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Project Showcase</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      overflow-x: hidden;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Klyro Hub - Home</title>
+<style>
+  /* Body and Header */
+  body { margin:0; font-family:Arial,sans-serif; background:#f9f9f9; color:#333; }
+  header { text-align:center; padding:3rem 1rem; background:linear-gradient(135deg,#6a11cb,#2575fc); color:white; }
+  header h1 { margin:0; font-size:2.5rem; }
+  header p { margin:0.5rem 0 0; font-size:1.2rem; }
 
-    header {
-      text-align: center;
-      padding: 4rem 1rem 2rem;
-      background: linear-gradient(135deg, #6a11cb, #2575fc);
-      color: white;
-      position: relative;
-      overflow: hidden;
-    }
+  /* Navigation */
+  nav { display:flex; justify-content:center; gap:1rem; margin-top:1rem; }
+  nav a { color:white; text-decoration:none; font-weight:bold; }
+  nav a:hover { text-decoration:underline; }
 
-    header h1 {
-      font-size: 2.8rem;
-      margin: 0 0 1rem;
-      animation: fadeInDown 1s ease forwards;
-      opacity: 0;
-    }
+  /* Featured Platforms Grid */
+  .featured { max-width:1200px; margin:2rem auto; display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:1.5rem; padding:0 1rem; }
+  .card { background:white; border-radius:12px; box-shadow:0 6px 15px rgba(0,0,0,0.1); padding:1rem; text-align:center; transition:0.3s; cursor:pointer; }
+  .card:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
+  .card img { max-width:100%; border-radius:8px; margin-bottom:1rem; }
+  .card h3 { margin:0.5rem 0; color:#2575fc; }
+  .card p { color:#555; font-size:0.95rem; }
+  .admin-badge { display:inline-block; background:#ff7f50; color:white; padding:0.2rem 0.6rem; border-radius:6px; font-size:0.75rem; margin-top:0.5rem; }
 
-    header p {
-      font-size: 1.2rem;
-      animation: fadeInUp 1.2s ease forwards;
-      opacity: 0;
-    }
-
-    @keyframes fadeInDown {
-      from { transform: translateY(-40px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
-    @keyframes fadeInUp {
-      from { transform: translateY(40px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
-    nav {
-      margin-top: 1rem;
-    }
-
-    .ads-link {
-      display: inline-block;
-      padding: 0.6rem 1.2rem;
-      background: white;
-      color: #2575fc;
-      font-weight: bold;
-      border-radius: 8px;
-      text-decoration: none;
-      transition: background 0.3s ease, color 0.3s ease;
-    }
-
-    .ads-link:hover {
-      background: #1b5edb;
-      color: white;
-    }
-
-    .categories {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-      padding: 3rem 1rem;
-    }
-
-    .category {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-      padding: 1.5rem 2rem;
-      cursor: pointer;
-      transition: transform 0.4s ease, box-shadow 0.3s ease;
-      opacity: 0;
-      transform: translateY(50px);
-      animation: floatUp 0.8s ease forwards;
-    }
-
-    .category:nth-child(1) { animation-delay: 0.3s; }
-    .category:nth-child(2) { animation-delay: 0.5s; }
-    .category:nth-child(3) { animation-delay: 0.7s; }
-
-    .category:hover {
-      transform: translateY(-10px) scale(1.05);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    }
-
-    @keyframes floatUp {
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .category-page {
-      display: none;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    .stack {
-      position: relative;
-      width: 300px;
-      margin: 2rem auto;
-      height: 220px;
-    }
-
-    .card {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.2rem;
-      transition: transform 0.4s ease, opacity 0.4s ease, z-index 0.2s;
-      cursor: pointer;
-      text-decoration: none;
-      color: #333;
-    }
-
-    .back-btn {
-      margin-top: 2rem;
-      padding: 0.5rem 1.5rem;
-      border: none;
-      border-radius: 8px;
-      background: #2575fc;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .back-btn:hover {
-      background: #1b5edb;
-    }
-
-    footer {
-      margin-top: 3rem;
-      padding: 1.5rem 1rem;
-      background: #222;
-      color: #ddd;
-      text-align: center;
-    }
-
-    footer p {
-      margin: 0.5rem 0;
-      font-size: 0.9rem;
-    }
-
-    footer nav {
-      margin-top: 0.5rem;
-    }
-
-    footer nav a {
-      margin: 0 0.8rem;
-      color: #ddd;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    footer nav a:hover {
-      color: #2575fc;
-    }
-  </style>
+  /* Footer */
+  footer { margin-top:3rem; padding:1.5rem 1rem; background:#222; color:#ddd; text-align:center; }
+  footer nav a { margin:0 0.8rem; color:#ddd; text-decoration:none; }
+  footer nav a:hover { color:#2575fc; }
+</style>
 </head>
 <body>
-  <header>
-    <h1>My Project Showcase</h1>
-    <p>Explore my projects by category</p>
-    <nav>
-      <a href="ads.html" class="ads-link">View Promotions</a>
-    </nav>
-  </header>
 
-  <section class="categories" id="categories">
-    <div class="category" data-category="learning">📘 Learning Projects</div>
-    <div class="category" data-category="religious">🕌 Religious Tools</div>
-    <div class="category" data-category="utility">⚙️ Utilities</div>
-  </section>
+<header>
+  <h1>Klyro Hub</h1>
+  <p>Welcome! Explore all platforms and tools from one place.</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="ads.html">Promotions</a>
+    <a href="hub-combined.html">Hub</a>
+    <a href="superadmin-dashboard.html">Superadmin</a>
+  </nav>
+</header>
 
-  <!-- Category Pages -->
-  <section class="category-page" id="learning">
-    <h2>Learning Projects</h2>
-    <div class="stack">
-      <a href="https://demonstration-room.vercel.app/" target="_blank" class="card">Demonstration Room</a>
-      <a href="https://pre-training.vercel.app/" target="_blank" class="card">Pre-Training</a>
-    </div>
-    <button class="back-btn">Back</button>
-  </section>
+<section class="featured" id="featuredPlatforms">
+  <!-- Featured platforms from localStorage will appear here -->
+</section>
 
-  <section class="category-page" id="religious">
-    <h2>Religious Tools</h2>
-    <div class="stack">
-      <a href="https://online-islamiyya.vercel.app/" target="_blank" class="card">Online Islamiyya</a>
-    </div>
-    <button class="back-btn">Back</button>
-  </section>
+<footer>
+  <p>© 2025 Klyro Hub · All rights reserved</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="ads.html">Promotions</a>
+    <a href="hub-combined.html">Hub</a>
+  </nav>
+</footer>
 
-  <section class="category-page" id="utility">
-    <h2>Utilities</h2>
-    <div class="stack">
-      <a href="https://cyberman-jet.vercel.app/" target="_blank" class="card">Cyberman Jet</a>
-    </div>
-    <button class="back-btn">Back</button>
-  </section>
+<script>
+  const featuredContainer = document.getElementById('featuredPlatforms');
 
-  <footer>
-    <p>© 2025 My Project Showcase · All rights reserved</p>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="ads.html">Promotions</a>
-    </nav>
-  </footer>
+  function loadFeaturedPlatforms(){
+    const platforms = JSON.parse(localStorage.getItem('platforms')) || [];
+    featuredContainer.innerHTML = '';
 
-  <script>
-    const categories = document.querySelectorAll('.category');
-    const categoryPages = document.querySelectorAll('.category-page');
-    const categoriesSection = document.getElementById('categories');
-
-    categories.forEach(cat => {
-      cat.addEventListener('click', () => {
-        const id = cat.dataset.category;
-        categoriesSection.style.display = 'none';
-        document.getElementById(id).style.display = 'block';
-
-        arrangeStack(document.getElementById(id).querySelector('.stack'));
+    platforms.forEach(p => {
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `
+        ${p.img ? `<img src="${p.img}" alt="${p.name}">` : ''}
+        <h3>${p.name}</h3>
+        <p>${p.desc}</p>
+        ${p.isAdmin ? '<span class="admin-badge">Admin</span>' : ''}
+      `;
+      card.addEventListener('click', () => {
+        // Placeholder for opening the platform
+        alert('Open "' + p.name + '" platform!');
       });
+      featuredContainer.appendChild(card);
     });
+  }
 
-    document.querySelectorAll('.back-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        categoryPages.forEach(page => page.style.display = 'none');
-        categoriesSection.style.display = 'flex';
-      });
-    });
+  // Initial load
+  loadFeaturedPlatforms();
 
-    function arrangeStack(stack) {
-      const cards = stack.querySelectorAll('.card');
-      cards.forEach((card, i) => {
-        card.style.zIndex = cards.length - i;
-        card.style.transform = `translateY(${i * 20}px) scale(${1 - i * 0.05})`;
-        card.style.opacity = `${1 - i * 0.1}`;
-      });
+  // Optional: refresh every few seconds if localStorage may change
+  // setInterval(loadFeaturedPlatforms, 3000);
+</script>
 
-      cards.forEach(card => {
-        card.onclick = e => {
-          e.preventDefault();
-          stack.appendChild(card);
-          arrangeStack(stack);
-          setTimeout(() => {
-            window.open(card.href, '_blank');
-          }, 400);
-        };
-      });
-    }
-  </script>
 </body>
-  </html>
+</html>
