--- a/store.html
+++ b/store.html
@@ -3,11 +3,124 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Storvia Store</title>
+  <title>Store - Storvia Marketplace</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #F4F4F7;
+      color: #2E2E2E;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: #2E2E2E;
+      color: white;
+    }
+    .logo {
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+    .logo span {
+      color: #DAA520;
+    }
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #DAA520;
+    }
+    .store-header {
+      text-align: center;
+      padding: 40px 20px;
+      background: white;
+      border-bottom: 2px solid #eee;
+    }
+    .store-header img.store-banner {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 12px;
+      margin-bottom: 20px;
+    }
+    .store-header h1 {
+      font-size: 2.5rem;
+      font-family: 'Poppins', sans-serif;
+      margin-bottom: 10px;
+    }
+    .store-header p {
+      font-size: 1.1rem;
+      color: #555;
+      max-width: 800px;
+      margin: auto;
+    }
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 30px;
+      padding: 40px;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .product-card {
+      background: white;
+      border-radius: 16px;
+      padding: 20px;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    }
+    .product-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+    }
+    .product-card img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
+    .product-card h4 {
+      margin-bottom: 8px;
+      font-size: 1.2rem;
+    }
+    .product-card p {
+      font-size: 1.1rem;
+      color: #DAA520;
+      font-weight: 600;
+      margin-bottom: 15px;
+    }
+    .product-card button {
+      padding: 10px 18px;
+      border-radius: 8px;
+      border: none;
+      background: #DAA520;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+    .product-card button:hover {
+      background: #c5941f;
+      transform: translateY(-3px);
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #2E2E2E;
+      color: white;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-  <header class="storvia-header">
+  <header>
     <div class="logo">Storvia<span>Marketplace</span></div>
     <nav>
       <a href="stores.html">Stores</a>
@@ -15,20 +128,17 @@
     </nav>
   </header>
 
-  <main>
+  <section class="store-header">
+    <img id="storeBanner" alt="Store Banner" class="store-banner">
     <h1 id="storeName"></h1>
-    <div id="storeBanner"></div>
-    <div id="filters">
-      <input type="search" id="searchBox" placeholder="Search products...">
-      <select id="priceFilter">
-        <option value="all">All prices</option>
-        <option value="low">Below $100</option>
-        <option value="mid">$100 - $500</option>
-        <option value="high">Above $500</option>
-      </select>
-    </div>
-    <section id="productsGrid"></section>
-  </main>
+    <p id="storeDescription"></p>
+  </section>
+
+  <main id="productList" class="product-grid"></main>
+
+  <footer>
+    © 2025 Storvia Marketplace — The way to stores.
+  </footer>
 
   <script src="assets/js/common.js"></script>
   <script src="assets/js/store.js"></script>
