--- a/stores.html
+++ b/stores.html
@@ -1,122 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Stores - Storvia Marketplace</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: #F4F4F7;
-      color: #2E2E2E;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background: #2E2E2E;
-      color: white;
-    }
-    .logo {
-      font-size: 1.5rem;
-      font-weight: 700;
-    }
-    .logo span {
-      color: #DAA520;
-    }
-    nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #DAA520;
-    }
-    h1 {
-      text-align: center;
-      margin: 40px 0 20px;
-      font-size: 2.5rem;
-      font-family: 'Poppins', sans-serif;
-    }
-    .store-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      padding: 40px;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .store-card {
-      background: white;
-      border-radius: 16px;
-      padding: 25px;
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-    .store-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
-    }
-    .store-card img.store-logo {
-      max-width: 100px;
-      margin-bottom: 15px;
-    }
-    .store-card h3 {
-      font-size: 1.4rem;
-      margin-bottom: 10px;
-    }
-    .store-card p {
-      font-size: 1rem;
-      color: #555;
-      margin-bottom: 20px;
-    }
-    .store-card button {
-      padding: 12px 20px;
-      border-radius: 8px;
-      border: none;
-      background: #DAA520;
-      color: white;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
-    .store-card button:hover {
-      background: #c5941f;
-      transform: translateY(-3px);
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #2E2E2E;
-      color: white;
-      margin-top: 40px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Storvia Stores</title>
+<link rel="stylesheet" href="assets/css/style.css">
+<style>
+body { font-family: Arial, sans-serif; background:#f9f9f9; margin:0; }
+h2 { margin-left:20px; color:#DAA520; font-size:1.8rem; }
+.stores-section { margin:40px 20px; }
+.stores-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; }
+.store-card {
+  background:white; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.1);
+  padding:15px; text-align:center; transition: transform 0.3s, box-shadow 0.3s; cursor:pointer;
+}
+.store-card:hover {
+  transform: scale(1.05);
+  box-shadow:0 8px 20px rgba(0,0,0,0.2);
+}
+.store-card img { width:100%; max-height:100px; object-fit:contain; margin-bottom:10px; }
+.store-card a { text-decoration:none; color:#DAA520; font-weight:bold; display:block; }
+</style>
 </head>
 <body>
-  <header>
-    <div class="logo">Storvia<span>Marketplace</span></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="cart.html">Cart 🛒 <span id="cartCount">0</span></a>
-    </nav>
-  </header>
 
-  <h1>Explore Our Stores</h1>
+<section class="stores-section">
+  <h2>🏬 Internal Stores</h2>
+  <div class="stores-grid" id="internalStoresGrid"></div>
+</section>
 
-  <main id="storeList" class="store-grid"></main>
+<section class="stores-section">
+  <h2>🌟 External Stores</h2>
+  <div class="stores-grid" id="externalStoresGrid"></div>
+</section>
 
-  <footer>
-    © 2025 Storvia Marketplace — The way to stores.
-  </footer>
+<script>
+async function loadStores() {
+  // Internal Stores
+  const internalRes = await fetch('assets/data/stores.json');
+  const internalStores = await internalRes.json();
+  const internalGrid = document.getElementById('internalStoresGrid');
+  internalStores.forEach(store=>{
+    if(store.type==='internal'){
+      const card = document.createElement('div');
+      card.className='store-card';
+      card.innerHTML=`
+        <a href="store.html?id=${store.id}">
+          <img src="assets/images/stores/${store.logo}" alt="${store.name}">
+          <div>${store.name}</div>
+        </a>
+      `;
+      internalGrid.appendChild(card);
+    }
+  });
 
-  <script src="assets/js/common.js"></script>
-  <script src="assets/js/stores.js"></script>
+  // External Stores
+  const externalRes = await fetch('assets/data/externalStores.json');
+  const externalStores = await externalRes.json();
+  const externalGrid = document.getElementById('externalStoresGrid');
+  externalStores.forEach(store=>{
+    const card = document.createElement('div');
+    card.className='store-card';
+    card.innerHTML=`
+      <a href="${store.url}" target="_blank">
+        <img src="${store.logo}" alt="${store.name}">
+        <div>${store.name}</div>
+      </a>
+    `;
+    externalGrid.appendChild(card);
+  });
+}
+
+loadStores();
+</script>
+
 </body>
 </html>
