--- a/index.html
+++ b/index.html
@@ -1,204 +1,107 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Storvia Marketplace</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <style>
-    /* ===== Premium Landing Page Styling ===== */
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: #F4F4F7;
-      color: #2E2E2E;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Storvia - Home</title>
+<link rel="stylesheet" href="assets/css/style.css">
+<style>
+body { font-family: Arial, sans-serif; margin:0; background:#f9f9f9; }
+header { background:#DAA520; color:white; padding:30px; text-align:center; }
+h2 { margin-left:20px; color:#DAA520; font-size:2rem; }
 
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      background: radial-gradient(circle at top, #fff, #F4F4F7, #e6e6e6);
-      padding: 40px 20px;
-    }
+.carousel-container {
+  display:flex; overflow-x:auto; gap:20px; padding:20px; perspective:1000px;
+  scroll-behavior:smooth;
+}
+.carousel-card {
+  flex:0 0 200px; background:white; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.1);
+  text-align:center; padding:15px; transition: transform 0.5s, box-shadow 0.5s;
+  transform-style: preserve-3d;
+}
+.carousel-card img { width:100%; max-height:100px; object-fit:contain; margin-bottom:10px; }
+.carousel-card a { text-decoration:none; color:#DAA520; font-weight:bold; display:block; }
+.carousel-card:hover { transform: rotateY(0deg) scale(1.1); box-shadow:0 8px 20px rgba(0,0,0,0.3); cursor:pointer; }
 
-    .hero h1 {
-      font-size: 3.5rem;
-      font-family: 'Poppins', sans-serif;
-      font-weight: 700;
-      color: #2E2E2E;
-      margin-bottom: 20px;
-      letter-spacing: -1px;
-    }
-
-    .hero h1 span {
-      color: #DAA520;
-    }
-
-    .hero p {
-      font-size: 1.25rem;
-      color: #444;
-      max-width: 700px;
-      margin-bottom: 35px;
-      line-height: 1.6;
-    }
-
-    .cta-btn {
-      font-size: 1.2rem;
-      padding: 14px 32px;
-      border-radius: 8px;
-      background: #DAA520;
-      color: white;
-      font-weight: 600;
-      border: none;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 8px 20px rgba(218,165,32,0.3);
-    }
-
-    .cta-btn:hover {
-      background: #c5941f;
-      transform: translateY(-4px);
-    }
-
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      padding: 60px 40px;
-      background: #fff;
-    }
-
-    .feature-card {
-      background: #F4F4F7;
-      border-radius: 16px;
-      padding: 30px;
-      text-align: center;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .feature-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-    }
-
-    .feature-card h3 {
-      color: #2E2E2E;
-      margin-bottom: 12px;
-      font-size: 1.3rem;
-    }
-
-    .feature-card p {
-      color: #555;
-      font-size: 1rem;
-      line-height: 1.5;
-    }
-
-    /* ===== About Storvia ===== */
-    .about {
-      padding: 80px 40px;
-      background: linear-gradient(135deg, #F4F4F7, #fff);
-      text-align: center;
-    }
-
-    .about h2 {
-      font-size: 2.2rem;
-      font-family: 'Poppins', sans-serif;
-      margin-bottom: 20px;
-      color: #2E2E2E;
-    }
-
-    .about p {
-      max-width: 800px;
-      margin: 0 auto 40px;
-      font-size: 1.1rem;
-      color: #444;
-      line-height: 1.7;
-    }
-
-    .trust-logos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 40px;
-      margin-top: 30px;
-    }
-
-    .trust-logos div {
-      font-size: 1rem;
-      font-weight: 600;
-      color: #DAA520;
-      border: 2px solid #DAA520;
-      padding: 12px 20px;
-      border-radius: 8px;
-      background: white;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-
-    footer {
-      text-align: center;
-      padding: 25px;
-      background: #2E2E2E;
-      color: white;
-      font-size: 0.95rem;
-      letter-spacing: 0.5px;
-    }
-  </style>
+.featured-section { padding:40px 20px; }
+.featured-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; }
+.featured-card {
+  background:white; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.1);
+  padding:15px; text-align:center; transition: transform 0.3s, box-shadow 0.3s;
+}
+.featured-card img { width:100%; border-radius:8px; }
+.featured-card:hover { transform: scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.2); }
+</style>
 </head>
 <body>
-  <header class="storvia-header">
-    <div class="logo">Storvia<span>Marketplace</span></div>
-    <nav>
-      <a href="stores.html">Stores</a>
-      <a href="cart.html">Cart 🛒 <span id="cartCount">0</span></a>
-    </nav>
-  </header>
 
-  <section class="hero">
-    <h1><span>Storvia</span> Marketplace</h1>
-    <p>The premium way to stores — elegant, modern, and built for a world-class shopping experience.</p>
-    <button class="cta-btn" onclick="window.location.href='stores.html'">Start Exploring</button>
-  </section>
+<header>
+  <h1>Welcome to Storvia</h1>
+  <p>Your gateway to premium internal and external stores</p>
+</header>
 
-  <section class="features">
-    <div class="feature-card">
-      <h3>🌍 Global Reach</h3>
-      <p>Access multiple stores and brands worldwide, all through Storvia’s unified platform.</p>
-    </div>
-    <div class="feature-card">
-      <h3>⚡ Seamless Experience</h3>
-      <p>Modern UI, golden-silver branding, and lightning-fast navigation for effortless shopping.</p>
-    </div>
-    <div class="feature-card">
-      <h3>💎 Premium Quality</h3>
-      <p>From luxury to essentials — only the finest selection of stores and products.</p>
-    </div>
-  </section>
+<!-- Featured Promos (Optional) -->
+<section class="featured-section" id="featuredPromos">
+  <h2>🔥 Featured Promos</h2>
+  <div class="featured-grid" id="featuredGrid"></div>
+</section>
 
-  <section class="about">
-    <h2>About Storvia</h2>
-    <p>
-      Storvia Marketplace is more than a storefront. We are building a digital gateway
-      where global merchants and customers meet with trust, elegance, and ease.
-      With our premium silver-gold identity, we bring luxury, convenience, and
-      accessibility into one seamless shopping journey.
-    </p>
+<!-- 3D Coverflow: External Members -->
+<section id="featuredExternalStores">
+  <h2 style="text-align:center;">🌟 Storvia Members</h2>
+  <div class="carousel-container" id="externalStoresCarousel"></div>
+</section>
 
-    <div class="trust-logos">
-      <div>Trusted by Sellers</div>
-      <div>Secured Checkout</div>
-      <div>Global Reach</div>
-      <div>Premium Support</div>
-    </div>
-  </section>
+<script>
+// ---------- Featured Promos ----------
+const promos = [
+  // Example data, can be dynamic from promos.json
+  { name:"Promo 1", img:"assets/images/products/promo1.jpg" },
+  { name:"Promo 2", img:"assets/images/products/promo2.jpg" },
+  { name:"Promo 3", img:"assets/images/products/promo3.jpg" }
+];
+const featuredGrid = document.getElementById('featuredGrid');
+promos.forEach(promo=>{
+  const card = document.createElement('div');
+  card.className='featured-card';
+  card.innerHTML=`<img src="${promo.img}" alt="${promo.name}"><h3>${promo.name}</h3>`;
+  featuredGrid.appendChild(card);
+});
 
-  <footer>
-    © 2025 Storvia Marketplace — The way to stores.
-  </footer>
+// ---------- 3D Coverflow: External Members ----------
+const externalMembers = [
+  { name: "Zainabs Henna", url: "https://zainabs-henna.vercel.app", logo: "assets/images/members/zainabs-henna.png" },
+  { name: "Pre-Training", url: "https://pre-training.vercel.app", logo: "assets/images/members/pre-training.png" },
+  { name: "Dheeja Store", url: "https://dheeja-store.vercel.app", logo: "assets/images/members/dheeja-store.png" },
+  { name: "Readify Rust", url: "https://readify-rust.vercel.app/", logo: "assets/images/members/readify-rust.png" },
+  { name: "Alhaji Mohammed", url: "https://alhaji-mohammed.vercel.app", logo: "assets/images/members/alhaji-mohammed.png" },
+  { name: "Demonstration Room", url: "https://demonstration-room.vercel.app", logo: "assets/images/members/demonstration-room.png" }
+];
+const carouselContainer = document.getElementById('externalStoresCarousel');
+externalMembers.forEach(member=>{
+  const card = document.createElement('div');
+  card.className='carousel-card';
+  card.innerHTML=`
+    <a href="${member.url}" target="_blank">
+      <img src="${member.logo}" alt="${member.name}">
+      <div>${member.name}</div>
+    </a>
+  `;
+  carouselContainer.appendChild(card);
+});
 
-  <script src="assets/js/common.js"></script>
+// Optional: Simple 3D rotation effect on scroll
+carouselContainer.addEventListener('scroll', ()=>{
+  const cards = document.querySelectorAll('.carousel-card');
+  const center = carouselContainer.scrollLeft + carouselContainer.offsetWidth / 2;
+  cards.forEach(card=>{
+    const cardCenter = card.offsetLeft + card.offsetWidth / 2;
+    const diff = center - cardCenter;
+    const rotateY = diff / 20; // rotation effect
+    card.style.transform = `rotateY(${rotateY}deg) scale(1)`;
+  });
+});
+</script>
+
 </body>
-    </html>
+</html>
