--- a/index.html
+++ b/index.html
@@ -2,48 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Storvia Multi-Storefront</title>
+  <title>Circle ⭕ – Home Feed</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.0/dist/gsap.min.js"></script>
+  <script src="js/hammer.min.js"></script>
 </head>
 <body>
-
-  <!-- Navbar -->
-  <header class="navbar">
-    <div class="logo">Storvia</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="stores.html">Stores</a>
-      <a href="promo.html">Promotions</a>
-      <a href="journey.html">Journey</a>
-    </nav>
+  <header class="top-nav">
+    <input type="text" placeholder="Search..."/>
+    <div class="icons">
+      <span class="notification">🔔</span>
+      <span class="profile">👤</span>
+    </div>
   </header>
 
-  <!-- Featured Stores / 3D Coverflow -->
-  <section id="featured-stores" class="coverflow-section">
-    <h2>Featured Stores</h2>
-    <div id="coverflowGallery" class="coverflow-gallery"></div>
-  </section>
+  <main class="home-feed">
+    <div class="carousel">
+      <div class="carousel-track"></div>
+    </div>
+    <div id="homeFeed" class="home-feed-cards"></div>
+  </main>
 
-  <!-- Current Promotions -->
-  <section id="current-promos">
-    <h2>Current Promotions</h2>
-    <div id="promoGallery" class="promo-gallery"></div>
-  </section>
-
-  <!-- Newsletter / CTA -->
-  <section class="cta-section">
-    <h2>Stay Updated!</h2>
-    <p>Subscribe to get the latest store updates and promotions.</p>
-    <input type="email" placeholder="Enter your email">
-    <button id="subscribeBtn">Subscribe</button>
-  </section>
-
-  <!-- Snackbar -->
   <div id="snackbar"></div>
 
-  <!-- Scripts -->
-  <script type="module" src="js/main.js"></script>
+  <nav class="bottom-nav">
+    <button class="nav-btn active">⭕ Home</button>
+    <button class="nav-btn">Circles</button>
+    <button class="nav-btn">Marketplace</button>
+    <button class="nav-btn">Academics</button>
+    <button class="nav-btn">Profile</button>
+  </nav>
+
+  <script src="js/helpers.js"></script>
+  <script src="js/app.js"></script>
 </body>
-</html></body>
 </html>
