--- a/promo.html
+++ b/promo.html
@@ -2,33 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Storvia - Promotions</title>
+  <title>Circle ⭕ – Circles</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.0/dist/gsap.min.js"></script>
+  <script src="js/hammer.min.js"></script>
 </head>
 <body>
-
-  <!-- Navbar -->
-  <header class="navbar">
-    <div class="logo">Storvia</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="stores.html">Stores</a>
-      <a href="promo.html" class="active">Promotions</a>
-      <a href="journey.html">Journey</a>
-    </nav>
+  <header class="top-nav">
+    <input type="text" placeholder="Search..."/>
+    <div class="icons">
+      <span class="notification">🔔</span>
+      <span class="profile">👤</span>
+    </div>
   </header>
 
-  <!-- Promotions Section -->
-  <main class="promo-section">
-    <h1>Current Promotions</h1>
-    <div id="promoGallery" class="promo-gallery"></div>
+  <main class="circles-module">
+    <div class="circle-banner">
+      <h3>Loading Circle...</h3>
+      <button class="join-btn">Join</button>
+    </div>
+
+    <div class="tabs">
+      <button class="tab-btn active" data-tab="posts">Posts</button>
+      <button class="tab-btn" data-tab="files">Files</button>
+      <button class="tab-btn" data-tab="events">Events</button>
+      <button class="tab-btn" data-tab="members">Members</button>
+    </div>
+
+    <div class="tab-content" id="posts"></div>
+    <div class="tab-content" id="files" style="display:none;"></div>
+    <div class="tab-content" id="events" style="display:none;"></div>
+    <div class="tab-content" id="members" style="display:none;"></div>
+
+    <button class="fab">+ Post</button>
   </main>
 
-  <!-- Snackbar -->
+  <div id="uploadModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h3>Upload File</h3>
+      <input type="file" id="fileInput" />
+      <button id="uploadBtn">Upload</button>
+    </div>
+  </div>
+
   <div id="snackbar"></div>
 
-  <!-- Scripts -->
-  <script type="module" src="js/promo.js"></script>
+  <nav class="bottom-nav">
+    <button class="nav-btn">Home</button>
+    <button class="nav-btn active">Circles</button>
+    <button class="nav-btn">Marketplace</button>
+    <button class="nav-btn">Academics</button>
+    <button class="nav-btn">Profile</button>
+  </nav>
+
+  <script src="js/helpers.js"></script>
+  <script src="js/app.js"></script>
 </body>
-</html>
+  </html>
