--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Circle ⭕ – Home Feed</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.0/dist/gsap.min.js"></script>
-  <script src="js/hammer.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Circle ⭕ – Home</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body onload="initPage('home')">
+
+  <!-- Top Nav -->
   <header class="top-nav">
-    <input type="text" placeholder="Search..."/>
-    <div class="icons">
-      <span class="notification">🔔</span>
-      <span class="profile">👤</span>
-    </div>
+    <div class="logo">⭕ Circle</div>
+    <nav class="top-links">
+      <a href="#">🔍 Search</a>
+      <a href="#">🔔 Notifications</a>
+      <a href="profile.html">👤 Profile</a>
+    </nav>
   </header>
 
-  <main class="home-feed">
-    <div class="carousel">
-      <div class="carousel-track"></div>
-    </div>
-    <div id="homeFeed" class="home-feed-cards"></div>
+  <!-- Dashboard Wrapper -->
+  <main class="dashboard">
+    <h2>Campus Pulse</h2>
+
+    <!-- Announcements -->
+    <section id="announcements" class="feed-section">
+      <h3>Announcements</h3>
+      <div class="cards" id="homeFeedAnnouncements">
+        <p class="loading">Loading announcements...</p>
+      </div>
+    </section>
+
+    <!-- Trending -->
+    <section id="trending" class="feed-section">
+      <h3>Trending Now</h3>
+      <div class="cards" id="homeFeedTrending">
+        <p class="loading">Loading trending posts...</p>
+      </div>
+    </section>
   </main>
 
-  <div id="snackbar"></div>
-
+  <!-- Bottom Nav -->
   <nav class="bottom-nav">
-    <button class="nav-btn active">⭕ Home</button>
-    <button class="nav-btn">Circles</button>
-    <button class="nav-btn">Marketplace</button>
-    <button class="nav-btn">Academics</button>
-    <button class="nav-btn">Profile</button>
+    <a href="index.html" class="active">⭕ Home</a>
+    <a href="circles.html">👥 Circles</a>
+    <a href="marketplace.html">🛒 Marketplace</a>
+    <a href="academics.html">📚 Academics</a>
+    <a href="events.html">🎉 Events</a>
   </nav>
 
   <script src="js/helpers.js"></script>
-  <script src="js/app.js"></script>
 </body>
 </html>
