--- a/profile.html
+++ b/profile.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Circle ⭕ – Profile</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.0/dist/gsap.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Circle ⭕ - Profile</title>
+<link rel="stylesheet" href="css/style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
-  <header class="top-nav">
-    <input type="text" placeholder="Search..."/>
-    <div class="icons">
-      <span class="notification">🔔</span>
-      <span class="profile">👤</span>
+
+<header class="top-nav">
+  <input type="text" placeholder="Search...">
+  <div class="icons">
+    <span class="notification">🔔</span>
+    <span class="profile">👤</span>
+  </div>
+</header>
+
+<div id="snackbar"></div>
+
+<main class="main-content">
+  <section class="profile-section">
+    <h3>John Doe</h3>
+    <p>Department: Computer Science | Level: 300L</p>
+
+    <div class="badge-container">
+      <span class="badge">🏆 Top Tutor</span>
+      <span class="badge">🎓 Campus Hustler</span>
     </div>
-  </header>
+  </section>
+</main>
 
-  <main class="profile-card">
-    <img src="https://i.pravatar.cc/100" alt="Profile" class="profile-img">
-    <h3 class="profile-name">Jane Doe</h3>
-    <p class="profile-role">Computer Science Student</p>
-    <button class="follow-btn">Follow</button>
-  </main>
+<nav class="bottom-nav">
+  <a href="index.html" class="nav-btn">⭕ Home</a>
+  <a href="circles.html" class="nav-btn">Circles</a>
+  <a href="marketplace.html" class="nav-btn">Marketplace</a>
+  <a href="academics.html" class="nav-btn">Academics</a>
+  <a href="profile.html" class="nav-btn active">Profile</a>
+</nav>
 
-  <div id="snackbar"></div>
-
-  <nav class="bottom-nav">
-    <button class="nav-btn">Home</button>
-    <button class="nav-btn">Circles</button>
-    <button class="nav-btn">Marketplace</button>
-    <button class="nav-btn">Academics</button>
-    <button class="nav-btn active">Profile</button>
-  </nav>
-
-  <script src="js/helpers.js"></script>
-  <script src="js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
