--- a/academics.html
+++ b/academics.html
@@ -1,33 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Circle ⭕ – Academics</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.0/dist/gsap.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Circle ⭕ - Academics Hub</title>
+<link rel="stylesheet" href="css/style.css">
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
-  <header class="top-nav">
-    <input type="text" placeholder="Search..."/>
-    <div class="icons">
-      <span class="notification">🔔</span>
-      <span class="profile">👤</span>
+
+<header class="top-nav">
+  <input type="text" placeholder="Search resources...">
+  <div class="icons">
+    <span class="notification">🔔</span>
+    <span class="profile">👤</span>
+  </div>
+</header>
+
+<div id="snackbar"></div>
+
+<main class="main-content">
+  <section class="academics-hub">
+    <h3>Academics Hub</h3>
+    <input type="text" id="searchResources" placeholder="Search resources..." />
+
+    <div class="tabs">
+      <button class="tab-btn active" data-tab="pastQs">Past Questions</button>
+      <button class="tab-btn" data-tab="notes">Notes</button>
+      <button class="tab-btn" data-tab="tutors">Tutors</button>
+      <button class="tab-btn" data-tab="studyGroups">Study Groups</button>
     </div>
-  </header>
 
-  <main class="academics-cards"></main>
+    <div class="tab-content" id="pastQs">
+      <div class="resource-card">CSC 300L Past Questions 2022 <button>Download</button></div>
+    </div>
+    <div class="tab-content" id="notes" style="display:none;">
+      <div class="resource-card">Lecture Notes Week 1 <button>Download</button></div>
+    </div>
+    <div class="tab-content" id="tutors" style="display:none;">John Doe - CSC Tutor</div>
+    <div class="tab-content" id="studyGroups" style="display:none;">CSC 300L Study Group</div>
 
-  <div id="snackbar"></div>
+    <button class="fab-upload">+ Upload</button>
+  </section>
+</main>
 
-  <nav class="bottom-nav">
-    <button class="nav-btn">Home</button>
-    <button class="nav-btn">Circles</button>
-    <button class="nav-btn">Marketplace</button>
-    <button class="nav-btn active">Academics</button>
-    <button class="nav-btn">Profile</button>
-  </nav>
+<nav class="bottom-nav">
+  <a href="index.html" class="nav-btn">⭕ Home</a>
+  <a href="circles.html" class="nav-btn">Circles</a>
+  <a href="marketplace.html" class="nav-btn">Marketplace</a>
+  <a href="academics.html" class="nav-btn active">Academics</a>
+  <a href="profile.html" class="nav-btn">Profile</a>
+</nav>
 
-  <script src="js/helpers.js"></script>
-  <script src="js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
