--- a/marketplace.html
+++ b/marketplace.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Circle ⭕ – Marketplace</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.0/dist/gsap.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Circle ⭕ - Marketplace</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="top-nav">
-    <input type="text" placeholder="Search..."/>
-    <div class="icons">
-      <span class="notification">🔔</span>
-      <span class="profile">👤</span>
+
+<header class="top-nav">
+  <input type="text" placeholder="Search stores...">
+  <div class="icons">
+    <span class="notification">🔔</span>
+    <span class="profile">👤</span>
+  </div>
+</header>
+
+<div id="snackbar"></div>
+
+<main class="main-content">
+  <section class="marketplace">
+    <div class="marketplace-card">
+      <h4>John’s Tutoring</h4>
+      <p>CSC 300L Exam Prep - $5/hr</p>
+      <button>Chat</button>
     </div>
-  </header>
+    <div class="marketplace-card">
+      <h4>Food Vendor: Yummy Bites</h4>
+      <p>Snacks & Drinks</p>
+      <button>Chat</button>
+    </div>
+  </section>
+</main>
 
-  <main class="marketplace-cards"></main>
+<nav class="bottom-nav">
+  <a href="index.html" class="nav-btn">⭕ Home</a>
+  <a href="circles.html" class="nav-btn">Circles</a>
+  <a href="marketplace.html" class="nav-btn active">Marketplace</a>
+  <a href="academics.html" class="nav-btn">Academics</a>
+  <a href="profile.html" class="nav-btn">Profile</a>
+</nav>
 
-  <div id="snackbar"></div>
-
-  <nav class="bottom-nav">
-    <button class="nav-btn">Home</button>
-    <button class="nav-btn">Circles</button>
-    <button class="nav-btn active">Marketplace</button>
-    <button class="nav-btn">Academics</button>
-    <button class="nav-btn">Profile</button>
-  </nav>
-
-  <script src="js/helpers.js"></script>
-  <script src="js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
