--- a/index.html
+++ b/index.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Circle ⭕ – Home</title>
-  <link rel="stylesheet" href="css/style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Circle ⭕ - Home Feed</title>
+<link rel="stylesheet" href="css/style.css">
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
-<body onload="initPage('home')">
+<body>
 
-  <!-- Top Nav -->
-  <header class="top-nav">
-    <div class="logo">⭕ Circle</div>
-    <nav class="top-links">
-      <a href="#">🔍 Search</a>
-      <a href="#">🔔 Notifications</a>
-      <a href="profile.html">👤 Profile</a>
-    </nav>
-  </header>
+<header class="top-nav">
+  <input type="text" placeholder="Search...">
+  <div class="icons">
+    <span class="notification">🔔</span>
+    <span class="profile">👤</span>
+  </div>
+</header>
 
-  <!-- Dashboard Wrapper -->
-  <main class="dashboard">
-    <h2>Campus Pulse</h2>
+<div id="snackbar"></div>
 
-    <!-- Announcements -->
-    <section id="announcements" class="feed-section">
-      <h3>Announcements</h3>
-      <div class="cards" id="homeFeedAnnouncements">
-        <p class="loading">Loading announcements...</p>
-      </div>
-    </section>
+<main class="main-content">
+  <section class="home-feed" id="homeFeed">
+    <div class="card">📢 Library hours updated.</div>
+    <div class="card trending">🔥 CSC 300L Exam Prep Tips.</div>
+    <div class="card">🎉 Faculty Dinner Event.</div>
+  </section>
+</main>
 
-    <!-- Trending -->
-    <section id="trending" class="feed-section">
-      <h3>Trending Now</h3>
-      <div class="cards" id="homeFeedTrending">
-        <p class="loading">Loading trending posts...</p>
-      </div>
-    </section>
-  </main>
+<nav class="bottom-nav">
+  <a href="index.html" class="nav-btn active">⭕ Home</a>
+  <a href="circles.html" class="nav-btn">Circles</a>
+  <a href="marketplace.html" class="nav-btn">Marketplace</a>
+  <a href="academics.html" class="nav-btn">Academics</a>
+  <a href="profile.html" class="nav-btn">Profile</a>
+</nav>
 
-  <!-- Bottom Nav -->
-  <nav class="bottom-nav">
-    <a href="index.html" class="active">⭕ Home</a>
-    <a href="circles.html">👥 Circles</a>
-    <a href="marketplace.html">🛒 Marketplace</a>
-    <a href="academics.html">📚 Academics</a>
-    <a href="events.html">🎉 Events</a>
-  </nav>
-
-  <script src="js/helpers.js"></script>
+<script src="js/app.js"></script>
+<script src="js/carousel.js"></script>
 </body>
 </html>
