--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <title>Circle ⭕ - YSU Student Platform | Study Groups, Marketplace & Academic Resources</title>
-    <meta name="description" content="Join Circle ⭕, Youngstown State University's premier student platform. Connect with study groups, buy/sell textbooks, access academic resources, find tutors, and discover campus events. Your gateway to academic success at YSU." />
-    <meta name="author" content="Circle Team" />
-    <meta name="keywords" content="YSU, Youngstown State University, student platform, study groups, marketplace, academic resources, tutors, campus events" />
-    <link rel="canonical" href="https://circle-ysu.com" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  />
+  <title>Circle ⭕ - YSU Student Platform | Study Groups, Marketplace & Academic Resources</title>
+  <meta
+    name="description"
+    content="Join Circle ⭕, Youngstown State University's premier student platform. Connect with study groups, buy/sell textbooks, access academic resources, find tutors, and discover campus events. Your gateway to academic success at YSU."
+  />
+  <meta name="author" content="Circle Team" />
+  <meta
+    name="keywords"
+    content="YSU, Youngstown State University, student platform, study groups, marketplace, academic resources, tutors, campus events"
+  />
+  <link rel="canonical" href="https://circle-ysu.com" />
 
-    <meta property="og:title" content="Circle ⭕ - YSU Student Platform" />
-    <meta property="og:description" content="Connect, Learn, and Thrive Together at Youngstown State University. Join study circles, access resources, and build your academic community." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://circle-ysu.com" />
-    <meta property="og:image" content="https://circle-ysu.com/og-image.jpg" />
-    <meta property="og:site_name" content="Circle ⭕" />
+  <meta property="og:title" content="Circle ⭕ - YSU Student Platform" />
+  <meta
+    property="og:description"
+    content="Connect, Learn, and Thrive Together at Youngstown State University. Join study circles, access resources, and build your academic community."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://circle-ysu.com" />
+  <meta property="og:image" content="https://circle-ysu.com/og-image.jpg" />
+  <meta property="og:site_name" content="Circle ⭕" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@CircleYSU" />
-    <meta name="twitter:title" content="Circle ⭕ - YSU Student Platform" />
-    <meta name="twitter:description" content="Connect, Learn, and Thrive Together at Youngstown State University" />
-    <meta name="twitter:image" content="https://circle-ysu.com/og-image.jpg" />
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@CircleYSU" />
+  <meta name="twitter:title" content="Circle ⭕ - YSU Student Platform" />
+  <meta
+    name="twitter:description"
+    content="Connect, Learn, and Thrive Together at Youngstown State University"
+  />
+  <meta name="twitter:image" content="https://circle-ysu.com/og-image.jpg" />
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <!-- Point to your compiled JavaScript bundle -->
+  <script type="module" src="./dist/assets/index.js"></script>
+</body>
 </html>
